--- a/sniproxy.service
+++ b/sniproxy.service
@@ -1,17 +1,22 @@
 [Unit]
-Description=Sniproxy
+Description=Sniproxy (Max Performance - Root)
 After=network-online.target
 Wants=network-online.target
 
 [Service]
-LimitCORE=infinity
-LimitNOFILE=512000
-LimitNPROC=512000
 Type=forking
 User=root
-Restart=always
-RestartSec=5s
 ExecStart=/usr/sbin/sniproxy -c /etc/sniproxy.conf
+Restart=always
+RestartSec=1s
+
+# Performance Limits
+LimitNOFILE=65535
+LimitNPROC=65535
+LimitCORE=infinity
+LimitMEMLOCK=65535
+LimitSTACK=8192K
+LimitAS=infinity
 
 [Install]
 WantedBy=multi-user.target
