--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -10,7 +10,8 @@ resolver {
     nameserver 1.1.1.1
     nameserver 9.9.9.9
     nameserver 8.8.8.8
-    mode ipv4_only
+    mode ipv4_first
+    timeout 5
 }
 listener 0.0.0.0:80 {
     proto http
